# ufsm

./: .gitignore  CMakeLists.txt  README.md  make.sh  ufsm.code-workspace
include/: ufsm.h  ufsm_types.h
src/: ufsm.c
test/: CMakeLists.txt  main.c
